--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@vercel/ncc": "^0.28.3",
     "eslint": "^7.25.0",
     "eslint-plugin-github": "^4.1.3",
+    "http-server": "^0.12.3",
     "mocha": "^8.3.2",
     "npm-run-all": "^4.1.5",
     "nyc": "^15.1.0",
