--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build": "ncc build src/index.ts -o dist/main && ncc build src/post.ts -o dist/post",
     "test": "run-p test:*",
     "test:run": "node ./test/test.js",
-    "test:setup": "http-server ./test -p 8080 2>&1 &",
+    "test:setup": "http-server ./test -p 8080 > /dev/null 2>&1 &",
     "coverage": "nyc -r lcov -e .ts -x \"*.test.ts\" npm run test",
     "all": "npm run build && npm run format && npm run lint && npm run coverage"
   },
@@ -22,9 +22,7 @@
     "proxy",
     "testingbot-tunnel"
   ],
-  "dependencies": {
-    "@actions/core": "^1.2.7",
-    "@actions/exec": "^1.0.4",
+  "devDependencies": {
     "@types/mocha": "^8.2.2",
     "@types/node": "^15.0.1",
     "@typescript-eslint/parser": "^4.22.0",
@@ -39,5 +37,9 @@
     "ts-node": "^9.1.1",
     "typescript": "^4.2.4",
     "webdriverio": "^7.5.2"
+  },
+  "dependencies": {
+    "@actions/core": "^1.2.7",
+    "@actions/exec": "^1.0.4"
   }
 }
