--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "webdriverio": "^7.5.2"
   },
   "dependencies": {
+    "@actions/artifact": "^0.5.1",
     "@actions/core": "^1.2.7",
     "@actions/exec": "^1.0.4"
   }
